# api/controllers/ctlTienTe.js
@@ -1,0 +1,171 @@
+const Constant = require('../constants/constant');
+const Op = require('sequelize').Op;
+const Result = require('../constants/result');
+var moment = require('moment');
+var mtblTienTe = require('../model/tiente')
+var database = require('../database');
+async function deleteRelationshiptblTienTe(db, listID) {
+    await mtblTienTe(db).destroy({
+        where: {
+            ID: {
+                [Op.in]: listID }
+        }
+    })
+}
+module.exports = {
+    deleteRelationshiptblTienTe,
+    //  get_detail_tblTienTeapi
+    detailtblTienTe: (req, res) => {
+        let body = req.body;
+        database.connectDatabase().then(async db => {
+            if (db) {
+                try {
+                    mtblTienTe(db).findOne({ where: { ID: body.id } }).then(data => {
+                        if (data) {
+                            var obj = {
+                                id: data.ID,
+                                tenVietTat: data.TenVietTat ? data.TenVietTat : '',
+                                tenDayDu: data.TenDayDu ? data.TenDayDu : '',
+                            }
+                            var result = {
+                                obj: obj,
+                                status: Constant.STATUS.SUCCESS,
+                                message: Constant.MESSAGE.ACTION_SUCCESS,
+                            }
+                            res.json(result);
+                        } else {
+                            res.json(Result.NO_DATA_RESULT)
+
+                        }
+
+                    })
+                } catch (error) {
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
+            }
+        })
+    },
+    // add_tblTienTeapi
+    addtblTienTe: (req, res) => {
+        let body = req.body;
+        database.connectDatabase().then(async db => {
+            if (db) {
+                try {
+                    mtblTienTe(db).create({
+                        TenVietTat: body.tenVietTat ? body.tenVietTat : '',
+                        TenDayDu: body.tenDayDu ? body.tenDayDu : '',
+                    }).then(data => {
+                        var result = {
+                            status: Constant.STATUS.SUCCESS,
+                            message: Constant.MESSAGE.ACTION_SUCCESS,
+                        }
+                        res.json(result);
+                    })
+                } catch (error) {
+                    console.log(error);
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
+            }
+        })
+    },
+    // update_tblTienTeapi
+    updatetblTienTe: (req, res) => {
+        let body = req.body;
+        database.connectDatabase().then(async db => {
+            if (db) {
+                try {
+                    let update = [];
+                    if (body.tenVietTat || body.tenVietTat === '')
+                        update.push({ key: 'TenVietTat', value: body.tenVietTat });
+                    if (body.tenDayDu || body.tenDayDu === '')
+                        update.push({ key: 'TenDayDu', value: body.tenDayDu });
+                    database.updateTable(update, mtblTienTe(db), body.id).then(response => {
+                        if (response == 1) {
+                            res.json(Result.ACTION_SUCCESS);
+                        } else {
+                            res.json(Result.SYS_ERROR_RESULT);
+                        }
+                    })
+                } catch (error) {
+                    console.log(error);
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
+            }
+        })
+    },
+    // delete_tblTienTeapi
+    deletetblTienTe: (req, res) => {
+        let body = req.body;
+        database.connectDatabase().then(async db => {
+            if (db) {
+                try {
+                    let listID = JSON.parse(body.listID);
+                    await deleteRelationshiptblTienTe(db, listID);
+                    var result = {
+                        status: Constant.STATUS.SUCCESS,
+                        message: Constant.MESSAGE.ACTION_SUCCESS,
+                    }
+                    res.json(result);
+                } catch (error) {
+                    console.log(error);
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
+            }
+        })
+    },
+    // get_list_tblTienTeapi
+    getListtblTienTe: (req, res) => {
+        let body = req.body;
+        database.connectDatabase().then(async db => {
+            if (db) {
+                try {
+                    var whereOjb = [];
+                    let stt = 1;
+                    mtblTienTe(db).findAll({
+                        offset: Number(body.itemPerPage) * (Number(body.page) - 1),
+                        limit: Number(body.itemPerPage),
+                        //  where: whereOjb,
+                        order: [
+                            ['ID', 'DESC']
+                        ],
+                    }).then(async data => {
+                        var array = [];
+                        data.forEach(element => {
+                            var obj = {
+                                stt: stt,
+                                id: Number(element.ID),
+                                tenVietTat: element.TenVietTat ? element.TenVietTat : '',
+                                tenDayDu: element.TenDayDu ? element.TenDayDu : '',
+                            }
+                            array.push(obj);
+                            stt += 1;
+                        });
+                        var count = await mtblTienTe(db).count()
+                        var result = {
+                            array: array,
+                            status: Constant.STATUS.SUCCESS,
+                            message: Constant.MESSAGE.ACTION_SUCCESS,
+                            all: count
+                        }
+                        res.json(result);
+                    })
+
+                } catch (error) {
+                    console.log(error);
+                    res.json(Result.SYS_ERROR_RESULT)
+                }
+            } else {
+                res.json(Constant.MESSAGE.USER_FAIL)
+            }
+        })
+    },
+
+}
